# clogger

./: CMakeLists.txt  LICENSE  README.md
src/: clogger.c  clogger.h
src/test/: main.c  test.txt
